# swc-plugin-monorepo-relative-path-resolve

./: Cargo.toml  README.md  package.json
example/: package.json  pnpm-lock.yaml
src/: lib.rs
