[package]
name = "swc-plugin-monorepo-relative-resolve"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
regex = "1.10.5"
serde = "1"
serde_json = "1.0.117"
swc_core = { version = "0.95.*", features = ["ecma_plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
